--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -268,6 +268,7 @@ a:hover {
 }
 
 #subscribe input[type="submit"] {
+  font-size: large;
   width: 132px;
   background: #f04e00;
   border: 0px #8428f0 solid;
